--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,18 @@ pandas
 flask
 # sqlite3 ## include in base
 gunicorn
+
+## for server to send requests
+#pylint==2.15.3
+#rust based linter
+boto3==1.24.87
+#web
+fastapi==0.85.0
+uvicorn==0.18.3
+#others
+Flask==2.0.2
+gunicorn
+Werkzeug==2.2.2
+python-dotenv
+requests
+openai==0.28.1
