--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,15 @@ black==22.3.0
 click==8.1.3 
 pytest==7.1.3
 pytest-cov==4.0.0
-requests==2.26.0
+requests
 #rust based linter
 ruff==0.0.284
 ## databricks
 pandas
 # python-dotenv
 # databricks-sql-connector
-
 ## for server to receive requests
 flask
 # sqlite3 ## include in base
 gunicorn
+python-dotenv
